# mlir-linalg-extended

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/LinalgExt/: CMakeLists.txt  LinalgExtOps.h  LinalgExtOps.td  StandaloneDialect.h
include/LinalgExt/Dialect/: LinalgExtDialect.h  LinalgExtDialect.td  LinalgExtOps.h  LinalgExtOps.td
include/LinalgExt/Transform/: CMakeLists.txt  LowerVecVecToLinalg.h  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/LinalgExt/: CMakeLists.txt  StandaloneDialect.cpp  StandaloneOps.cpp
lib/LinalgExt/Dialect/: CMakeLists.txt  LinalgExtDialect.cpp  LinalgExtOps.cpp
lib/LinalgExt/Transform/: LowerVecVecToLinalg.cpp
lib/Transform/: CMakeLists.txt  LowerVecVecToLinalg.cpp
linalgext-opt/: CMakeLists.txt  linalgext-opt.cpp
standalone-opt/: CMakeLists.txt  standalone-opt.cpp
test/: CMakeLists.txt  linalg.mlir  run_test.sh  vecvec_test.mlir
